# oberon0-compiler

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
compiler/: __init__.py
doc/: oberon0.ebnf
docs/: api.rst  cli.rst  conf.py  index.rst  oberon-micro.ebnf  oberon-nano.ebnf  oberon-pico.ebnf
examples/: TestOberon0.Mod  add.mod  assign.mod  basic.mod  bool.mod  call.Mod  const.mod  foobar.mod  foobar_200.mod  global.Mod  loop.mod  mul.mod  print42.mod  print_odd_numbers.mod  sample.mod
oberon0_compiler/: __init__.py  ast.py  code_gen.py  parser.py  scanner.py  sym_table.py  token.py
oberon0_compiler/tests/: test_scanner.py  test_simple_compilation.py
oberon0_compiler/tests/mod/: mul.mod
src/oberon0_compiler/: __init__.py  ast.py  code_gen.py  parser.py  scanner.py  sym_table.py  systemcalls.py  token.py  type_checker.py  types.py
tests/: test_scanner.py  test_simple_compilation.py
tests/mod/: add.wasm.expected  mul.mod  mul.wasm.expected  ops.mod  ops.wasm.expected  sample.mod  sample.wasm.expected
